--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "ant-design-vue": "^3.2.20",
+    "clipboard": "^2.0.11",
     "core-js": "^3.8.3",
+    "element-plus": "^2.3.4",
+    "sortablejs": "^1.15.0",
     "vue": "^3.2.13"
   },
   "devDependencies": {
